--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,39 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v5
         env:
+          # Pastikan semua secret ini sudah diatur di GitHub
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+      - name: 'Langkah 6: Install JQ (JSON Parser)'
+        # Menggunakan Chocolatey, package manager untuk Windows
+        run: choco install jq -y
+
+      - name: 'Langkah 7: Verifikasi Hasil Keamanan Secara Manual'
+        # Hanya berjalan jika pemicunya adalah Pull Request
+        if: github.event_name == 'pull_request'
+        # Menggunakan PowerShell untuk menjalankan perintah
+        shell: pwsh
+        run: |
+          # Tunggu 15 detik agar hasil analisis tersedia di API
+          Start-Sleep -Seconds 15
+
+          # Ambil metrik analisis dari API SonarCloud menggunakan curl
+          # Ganti nilai 'component' dan 'pullRequest' dengan variabel yang sesuai
+          $METRICS = curl.exe -s -u "${{ secrets.SONAR_TOKEN }}:" "https://sonarcloud.io/api/measures/component?component=${{ secrets.SONAR_PROJECT_KEY }}&metricKeys=new_vulnerabilities&pullRequest=${{ github.event.pull_request.number }}"
+          
+          # Ekstrak jumlah kerentanan baru dari hasil JSON
+          $NEW_VULNS = ($METRICS | ConvertFrom-Json).component.measures | Where-Object { $_.metric -eq "new_vulnerabilities" } | Select-Object -ExpandProperty value
+          
+          Write-Host "Ditemukan kerentanan baru: $NEW_VULNS"
+          
+          # Periksa hasilnya. Jika lebih dari 0, gagalkan pipeline!
+          if ([int]$NEW_VULNS -gt 0) {
+            Write-Host "Pipeline GAGAL karena ditemukan kerentanan baru pada kode!"
+            exit 1
+          } else {
+            Write-Host "Pipeline SUKSES, tidak ditemukan kerentanan baru."
+          }
