--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,39 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v5
         env:
+          # Pastikan semua secret ini sudah diatur di GitHub
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+      - name: 'Langkah 6: Install JQ (JSON Parser)'
+        # Menggunakan Chocolatey, package manager untuk Windows
+        run: choco install jq -y
+
+      - name: 'Langkah 7: Verifikasi Hasil Keamanan Secara Manual'
+        if: github.event_name == 'pull_request'
+        shell: pwsh
+        run: |
+          Start-Sleep -Seconds 15
+
+          $METRICS = curl.exe -s -u "${{ secrets.SONAR_TOKEN }}:" "https://sonarcloud.io/api/measures/component?component=${{ secrets.SONAR_PROJECT_KEY }}&metricKeys=new_vulnerabilities&pullRequest=${{ github.event.pull_request.number }}"
+          
+          $NEW_VULNS_OBJECT = ($METRICS | ConvertFrom-Json).component.measures | Where-Object { $_.metric -eq "new_vulnerabilities" }
+          
+          # Periksa apakah objek kerentanan ditemukan. Jika tidak, nilainya adalah 0.
+          if ($null -eq $NEW_VULNS_OBJECT) {
+            $NEW_VULNS = 0
+          } else {
+            $NEW_VULNS = $NEW_VULNS_OBJECT | Select-Object -ExpandProperty value
+          }
+          
+          Write-Host "Ditemukan kerentanan baru: $NEW_VULNS"
+          
+          if ([int]$NEW_VULNS -gt 0) {
+            Write-Host "Pipeline GAGAL karena ditemukan kerentanan baru pada kode!"
+            exit 1
+          } else {
+            Write-Host "Pipeline SUKSES, tidak ditemukan kerentanan baru."
+          }
